--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,3 +1,3 @@
 <% @courses.each do |course| %>
-  <h3><%= course.name  %></h3>
+  <h3><%= course.name  %>: <%= course.students.count  %></h3>
 <% end %>
